@@ -82,6 +82,7 @@ $magicWords = array(
 	'MAG_SUBJECTPAGENAME',
 	'MAG_SUBJECTPAGENAMEE',	
 	'MAG_NUMBEROFUSERS',
+	'MAG_RAWSUFFIX',
 );
 if ( ! defined( 'MEDIAWIKI_INSTALL' ) )
 	wfRunHooks( 'MagicWordMagicWords', array( &$magicWords ) );
@@ -126,6 +127,7 @@ $wgVariableIDs = array(
 	MAG_SUBJECTPAGENAME,
 	MAG_SUBJECTPAGENAMEE,
 	MAG_NUMBEROFUSERS,
+	MAG_RAWSUFFIX,
 );
 if ( ! defined( 'MEDIAWIKI_INSTALL' ) )
 	wfRunHooks( 'MagicWordwgVariableIDs', array( &$wgVariableIDs ) );
